# QJSONListModel

./: .gitignore  CMakeLists.txt  DisplayLogic.cpp  DisplayLogic.hpp  GlobalClient.cpp  GlobalClient.hpp  README.md  main.cpp  main.qml  qml.qrc  sampleentityb.txt
provider2/: .gitignore  ProviderAPI.h  ProviderImpl.cpp  Provider_Export.h  provider2.sln  provider2.vcxproj
